// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Molecules/Alert Alert 1`] = `
<div
  alertid="test_id"
  class="rpl-alert-base rpl-alert rpl-alert-base--color-danger"
  data-alert-type="Emergency"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="rpl-alert-base__icon rpl-icon rpl-icon--alert_information rpl-icon--color_white"
    overflow="visible"
    style="width: 20px; height: 20px;"
    viewBox="0 0 20 20"
  >
    <path
      d="M11.667 10a1.667 1.667 0 11-3.334 0V5a1.667 1.667 0 013.334 0v5zM10 16.667a1.67 1.67 0 01-1.54-2.306A1.667 1.667 0 1110 16.667zM0 10c0 5.514 4.486 10 10 10s10-4.486 10-10S15.514 0 10 0 0 4.486 0 10z"
    />
     
  </svg>
   
  <div
    class="rpl-alert-base__content rpl-alert-base__content--color-white"
  >
    <span
      class="rpl-alert__title"
    >
      This is an emergency alert.
    </span>
     
    <a
      class="rpl-link rpl-text-link rpl-alert__link"
      data-print-url="#"
      href="#"
    >
      <span
        class="rpl-link__inner"
      >
        <span
          class="rpl-text-label rpl-text-label--dark"
        >
          <span>
            <span>
              Find out
            </span>
             
            <span
              class="rpl-text-icon__group"
            >
               more
              <svg
                aria-hidden="true"
                class="rpl-icon rpl-icon--right rpl-icon--color_white rpl-text-icon--after"
                overflow="visible"
                style="width: 5px; height: 8px;"
                viewBox="0 0 5 8"
              >
                <path
                  d="M.293 7.707a1 1 0 010-1.414L2.586 4 .293 1.707A1 1 0 011.707.293l3 3a1 1 0 010 1.414l-3 3a1 1 0 01-1.414 0z"
                />
                 
              </svg>
            </span>
          </span>
        </span>
      </span>
    </a>
  </div>
   
  <button
    class="rpl-alert-base__close"
  >
    <svg
      aria-hidden="true"
      class="rpl-icon rpl-icon--close rpl-icon--color_white"
      overflow="visible"
      style="width: 16px; height: 16px;"
      viewBox="0 0 16 16"
    >
      <path
        d="M14.996.293a1 1 0 00-1.415 0L7.644 6.23 1.707.293A1 1 0 00.293 1.707L6.23 7.644.651 13.223a1 1 0 001.415 1.414l5.578-5.579 5.579 5.58a1 1 0 001.414-1.415L9.058 7.644l5.938-5.937a1 1 0 000-1.414z"
      />
       
    </svg>
    <span>
      Dismiss alert
    </span>
  </button>
</div>
`;

exports[`RippleStoryshots Molecules/Alert Alert Base 1`] = `
<div
  class="rpl-alert-base rpl-alert-base--color-dark_neutral"
>
  <svg
    aria-hidden="true"
    class="rpl-alert-base__icon rpl-icon rpl-icon--alert_information rpl-icon--color_white"
    overflow="visible"
    style="width: 20px; height: 20px;"
    viewBox="0 0 20 20"
  >
    <path
      d="M11.667 10a1.667 1.667 0 11-3.334 0V5a1.667 1.667 0 013.334 0v5zM10 16.667a1.67 1.67 0 01-1.54-2.306A1.667 1.667 0 1110 16.667zM0 10c0 5.514 4.486 10 10 10s10-4.486 10-10S15.514 0 10 0 0 4.486 0 10z"
    />
     
  </svg>
   
  <div
    class="rpl-alert-base__content rpl-alert-base__content--color-white"
  >
    <div>
      Draft only and not yet published
    </div>
  </div>
   
  <button
    class="rpl-alert-base__close"
  >
    <svg
      aria-hidden="true"
      class="rpl-icon rpl-icon--close rpl-icon--color_white"
      overflow="visible"
      style="width: 16px; height: 16px;"
      viewBox="0 0 16 16"
    >
      <path
        d="M14.996.293a1 1 0 00-1.415 0L7.644 6.23 1.707.293A1 1 0 00.293 1.707L6.23 7.644.651 13.223a1 1 0 001.415 1.414l5.578-5.579 5.579 5.58a1 1 0 001.414-1.415L9.058 7.644l5.938-5.937a1 1 0 000-1.414z"
      />
       
    </svg>
    <span>
      Close
    </span>
  </button>
</div>
`;
